# NeoFlux

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt
app/src/: DemoPlugin.cpp  DemoPlugin.h  MyAppWidget.cpp  MyAppWidget.h  main.cpp
cmake/: Dependencies.cmake  FindSkia.cmake
framework/: CMakeLists.txt
framework/include/neo_flux/core/: Bridge.h  BuildContext.h  State.h  Widget.h
framework/include/neo_flux/engine/: LayoutEngine.h  RenderEngine.h
framework/include/neo_flux/widgets/: ButtonWidget.h  ContainerWidget.h  TextWidget.h
framework/include/neoflux/core/: Bridge.h  BuildContext.h  State.h  Widget.h
framework/include/neoflux/engine/: LayoutEngine.h  RenderEngine.h
framework/include/neoflux/platform/: PlatformWindow.h
framework/include/neoflux/plugin/: Plugin.h  PluginRegistry.h
framework/include/neoflux/render/: NullRenderer.h  RenderContext.h  Renderer.h  SkiaGlfwRenderer.h
framework/include/neoflux/util/: SPSCQueue.h
framework/include/neoflux/utils/: MemoryPool.h  SPSCQueue.h
framework/include/neoflux/widgets/: ButtonWidget.h  ContainerWidget.h  TextWidget.h
framework/src/core/: Widget.cpp
framework/src/engine/: LayoutEngine.cpp  RenderEngine.cpp
framework/src/middleware/: FrameFlattener.cpp  LayoutRenderBridge.cpp
framework/src/platform/: PlatformWindow.cpp
framework/src/plugin/: Plugin.cpp
framework/src/render/: NullRenderer.cpp  SkiaGlfwRenderer.cpp
framework/src/threading/: SPSCRingBuffer.cpp  Semaphore.cpp  ThreadPool.cpp
framework/src/utils/: MemoryPool.cpp  SIMDUtils.cpp  SPSCQueue.cpp
framework/src/widgets/: ButtonWidget.cpp  ContainerWidget.cpp  TextWidget.cpp
scripts/: build.sh  format.sh  lint.sh  run_tests.sh  setup_thirdparty.sh
tests/: CMakeLists.txt
tests/src/: test_main.cpp  test_placeholder.cpp  test_renderer.cpp  test_spsc.cpp
